--- a/src/index.html
+++ b/src/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Translate the Verb (Infinitive)</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>Finnish to Swedish Guess Game</title>
   </head>
   <body>
     <div id="root"></div>
-    <!-- In a real project use a bundler (Vite/CRA) to compile TSX -> JS. The dev HTML can point to the bundled script. -->
-    <script type="module" src="index.tsx"></script>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
