deploy: 6bfd443b7a9d9fcd137200d79121ae43519f3f7d

--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1.0"><title>Translate the Verb (Infinitive)</title><body>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1"><title>Finnish to Swedish Guess Game</title><body>
     <div id=root></div>
-    
-    <script type=module src=gpt5-translate-game.2b5cb75e.js></script>
+    <script type=module src=gpt5-translate-game.cf3db8cc.js></script>
   
 
