--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,11 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>Finnish to Swedish Guess Game</title>
+    <title>SanaShuffle</title>
+    <link href="./index.css" type="text/css" rel="stylesheet" />
   </head>
-  <body>
+  <body class="h-screen flex flex-col items-center justify-center bg-[#FDF9F4]">
+    <img src="../static/logo.png" alt="Logo" width="300" />
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
   </body>
