--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1"><title>Finnish to Swedish Guess Game</title><body>
+<!DOCTYPE html><html lang=en><meta charset=UTF-8><meta name=viewport content="width=device-width, initial-scale=1"><title>SanaShuffle</title><link href=gpt5-translate-game.98abe602.css rel=stylesheet><body class="bg-[#FDF9F4] flex flex-col h-screen items-center justify-center">
+    <img src=logo.79052a20.png alt=Logo>
     <div id=root></div>
-    <script type=module src=gpt5-translate-game.181e3481.js></script>
+    <script type=module src=gpt5-translate-game.e0e6bb24.js></script>
   
 
